# CppCache

./: CMakeLists.txt  README.md
src/: ARC.hpp  IdealCache.hpp  LRUC.hpp  TestOfEfficiency.cpp  main.cpp
tests/: ARC_tests.cpp  CMakeLists.txt  IdealCache_tests.cpp  LRUC_tests.cpp
